fix padding top on smaller screensize

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -48,10 +48,17 @@ p {
   padding: 7.1rem 2.4rem;
   transition: var(--transition) padding;
   @media (min-width: 768px) {
-    padding: 12rem 4.8rem;
+    padding-left: 4.8rem;
+    padding-right: 4.8rem;
   }
   @media (min-width: 1200px) {
-    padding: 16.4rem 0;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  @media (min-height: 900px) {
+    padding-top: 16.4rem;
+    padding-bottom: 16.4rem;
   }
 }
 
